hydrology overhaul